# dotfiles

./: .aliases  .aliases.old  .aliases.smart  .bashrc  .bashrc.minimal  .claude.md  .env.example  .envrc  .gateway-status  .gitattributes  .gitconfig  .gitignore  .last-tool-update  .last_commit  .mise.toml  .remote_hash  .secrets.baseline  .sops.yaml  .statix.toml  .system-deps-installed  .tmux.conf  .tool-versions  2026-04-19-215527-claude.txt  CLAUDE.md  NEW_MACHINE_SETUP.md  README.md  SECURITY.md  SOPS_SETUP.md  SOPS_USAGE.md  STRUCTURE.md  TODO.md  bootstrap-new-machine.sh  bootstrap-remote.sh  bootstrap.sh  example-hosts.json  example-unified-hosts.json  flake.nix  install.sh  justfile  lefthook.yml  (+11 more)
.admin/: .gitignore  central-secrets-solutions.md  guardian-control.sh  key-guardian-design.md  key-guardian-helper.sh  key-management-guide.md  shell-admin.sh  shell-sync-guardian.sh
.config/: README.md  ops-hosts.conf  starship-clean.toml
.direnv/: flake-profile-2-link
.github/: README_TOKENS.md
.guardian-shell/: README.md  build-final.sh  build-minimal.sh  build.sh  emergency-recovery.sh  emergency.sh  guardian-keeper-fixed.rs  guardian-keeper-spacex.rs  guardian-keeper-toyota.rs  guardian-keeper-v2.rs  guardian-keeper.rs  key-guardian.rs  minimal-guardian.rs  shell-guardian  shell-guardian.rs  (+4 more)
tools/secret-tui-rust/: .mise.toml  Cargo.toml  GITHUB_ACTIONS_INTEGRATION.md  OAUTH_SETUP.md  SERVERLESS_SETUP.md  example-sync-config.json  rust-toolchain.toml
tools/secret-tui-rust/src/: auth.rs  cli.rs  github_actions.rs  main.rs  performance.rs  sync.rs  vault.rs
(+622 files in other folders)
