[package]
name = "secret-tui"
version = "0.1.0"
edition = "2021"
description = "Terminal UI for managing SOPS-encrypted secrets"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21"
sha2 = "0.10"
chacha20poly1305 = "0.10"
rand = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
qrcode = "0.14"
hostname = "0.3"
opener = "0.6"
regex = "1.10"
